# android-3d

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/roncho/opengl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: settings.engine
app/src/main/assets/data/objects/: demo.x
app/src/main/assets/shaders/: fragment.frag  vertex.vert
app/src/main/assets/shaders/ui/: fragment.frag  text_vertex.vert  vertex.vert
app/src/main/cpp/: CMakeLists.txt  native_lib.cpp  uitext.h
app/src/main/cpp/audio/: checker.h  engine.cpp  engine.h
app/src/main/cpp/data/: structs.cpp  structs.h  wavefront.cpp  wavefront.h
app/src/main/cpp/data/files/audio/: wave_pcm.cpp  wave_pcm.h
app/src/main/cpp/jnih/: jnih.h  jnih_arrays.cpp
app/src/main/cpp/parsers/: struc_parsers.cpp  struc_parsers.h  wavefront_parser.cpp  wavefront_parser.h
app/src/main/java/com/roncho/engine/: DontSerializeField.java  Engine.java  Failable.java  ObjectFactory.java  World.java
app/src/main/java/com/roncho/engine/android/: AssetHandler.java  GameRendererView.java  Logger.java  WorldRenderer.java
app/src/main/java/com/roncho/engine/audio/: AudioClip.java  AudioEngine.java  AudioStreamPlayer.java
app/src/main/java/com/roncho/engine/gl/: Shader.java
app/src/main/java/com/roncho/engine/helpers/: Builder.java  FrameRateLogger.java  Input.java  MathF.java  Screen.java  Time.java
app/src/main/java/com/roncho/engine/physics/: Collision.java  Physics.java  (+1 more)
app/src/main/java/com/roncho/game/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/roncho/opengl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+32 files in other folders)
